# card-collector

./: .env.example  .env.pi.example  .gitignore  CONTRIBUTING.md  DATABASE_AUTO_SETUP.md  DEPLOYMENT.md  DISCORD_SETUP.md  Dockerfile  Dockerfile.bot  Dockerfile.pi.bot  Dockerfile.pi.web  Dockerfile.web  HOSTING_GUIDE.md  LICENSE  MONGODB_SETUP.md  Procfile  QUICK_FIX.md  README.md  README_RASPBERRY_PI.md  RENDER_DEPLOY.md  ROADMAP.md  TODO.md  WINDOWS_SETUP.md  alembic.ini  app.yaml  check_deps.py  config.bat  configure_token.py  cookies.txt  dev.bat  docker-compose.pi.yml  docker-compose.yml  env.example  env.production  install.bat  install_deps.py  install_mongodb.py  nginx.conf  pyproject.toml  requirements-dev.txt  (+13 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
bot/: __init__.py  admin.py  cdn.py  commands.py  embeds.py  main.py  permissions.py
config/: pi-optimizations.conf
db/: base.py  config.py  crud.py  database.py  models.py  mongodb_base.py  mongodb_crud.py  mongodb_models.py
db/migrations/: env.py
scripts/: init_db.py
scripts/pi/: deploy_pi.sh  monitor_pi.sh  setup_pi.sh
services/: image_service.py  scheduler.py
tests/: test_api.py
web/: __init__.py  api.py  app.py  auth.py  models.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: admin.html  base.html  cards.html  collection.html  home.html  layout.html  upload.html
